# todo-cli

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
data/: tasks.json  tasks.txt
include/: Storage.h  Todo.h  TodoManager.h
include/cli/: CommandHandler.h
include/commands/: AddCommand.h  DeleteCommand.h  DoneCommand.h  ICommand.h  ListCommand.h
include/core/: TodoManager.h
include/storage/: IStorage.h  JsonSerializer.h  Storage.h
include/utils/: Logger.h
src/: CommandHandler.cpp  Storage.cpp  Todo.cpp  TodoManager.cpp  main.cpp
src/cli/: CommandHandler.cpp
src/commands/: AddCommand.cpp  DeleteCommand.cpp  DoneCommand.cpp  ListCommand.cpp
src/core/: Todo.cpp  TodoManager.cpp
src/storage/: JsonSerializer.cpp  Storage.cpp
src/utils/: Logger.cpp
tests/: FakeStorage.h  TodoManagerTest.cpp
